maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: illegal start of simple expression
	}
        ^Escaper:13: error: 'while' expected but '}' found.
}
^